# KirbParse

./: .gitignore  CMakeLists.txt  README.md
src/: kirbparse.c  kirbparse.h  test.c
